0030617: Coding - using reinterpret_cast instead of static_cast for downcast

Several reinterpret_cast have been replaced by static_cast when applicable.